--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="w-full font-sans bg-black">
     <header class="relative w-full h-screen overflow-hidden">
-        <h1 class="big-title absolute z-30 leading-loose w-full text-center text-8xl font-semibold text-white animated" data-speed="0.2">KADINGEH</h1>
+        <h1 class="big-title absolute z-30 leading-loose w-full text-center text-4xl md:text-8xl lg:text-8xl font-semibold text-white animated" data-speed="0.2">KADINGEH</h1>
         <img class="mountain1 absolute animated" data-speed="-0.25" src="assets/img/gunung6.png" alt="" srcset="">
         <img class="mountain2 absolute animated" data-speed="-0.2" src="assets/img/gunung5.png" alt="" srcset="">
         <img class="mountain3 absolute animated" data-speed="0.4" src="assets/img/gunung3.png" alt="" srcset="">
@@ -32,17 +32,17 @@
         <div class="shadow absolute bottom-full h-80 w-full left-0 z-20 bg-gradient-to-t from-black to-transparent">
         </div>
         <div class="content opacity py-20">
-            <div class="site-list flex justify-evenly">
-                <div class="opacity site1 w-1/5 justify-center h-96 bg-blue-500 text-center flex items-end py-10 text-white">
+            <div class="site-list flex flex-col md:flex-row lg:flex-row justify-evenly">
+                <div class="opacity site1 w-full lg:w-1/5 md:w-1/5 justify-center my-2 md:my-0 lg:my-0 h-20 lg:h-96 md:h-96 bg-blue-500 text-center flex items-end py-10 text-white">
                     <p class="font-semibold">Manduk patinna</p> 
                 </div>
-                <div class="opacity site2 w-1/5 justify-center h-96 bg-blue-500 text-center flex items-end py-10 text-white">
+                <div class="opacity site2 w-full lg:w-1/5 md:w-1/5 justify-center my-2 md:my-0 lg:my-0 h-20 lg:h-96 md:h-96 bg-blue-500 text-center flex items-end py-10 text-white">
                     <p class="font-semibold">Lo'ko Wai Lambuh</p> 
                 </div>
-                <div class="opacity site3 w-1/5 justify-center h-96 bg-blue-500 text-center flex items-end py-10 text-white">
+                <div class="opacity site3 w-full lg:w-1/5 md:w-1/5 justify-center my-2 md:my-0 lg:my-0 h-20 lg:h-96 md:h-96 bg-blue-500 text-center flex items-end py-10 text-white">
                     <p class="font-semibold">Sarambu Alla</p> 
                 </div>
-                <div class="opacity site4 w-1/5 justify-center h-96 bg-blue-500 text-center flex items-end py-10 text-white">
+                <div class="opacity site4 w-full lg:w-1/5 md:w-1/5 justify-center my-2 md:my-0 lg:my-0 h-20 lg:h-96 md:h-96 bg-blue-500 text-center flex items-end py-10 text-white">
                     <p class="font-semibold">Camping Ground</p> 
                 </div>
             </div>
