--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="w-full font-sans bg-black">
     <header class="relative w-full h-screen overflow-hidden">
-        <h1 class="big-title absolute z-30 leading-loose w-full text-center text-4xl md:text-8xl lg:text-8xl font-semibold text-white animated" data-speed="0.2">KADINGEH</h1>
+        <h1 class="big-title absolute z-30 leading-loose w-full text-center text-4xl sm:text-4xl md:text-8xl lg:text-8xl font-semibold text-white animated" data-speed="0.2">KADINGEH</h1>
         <img class="mountain1 absolute animated" data-speed="-0.25" src="assets/img/gunung6.png" alt="" srcset="">
         <img class="mountain2 absolute animated" data-speed="-0.2" src="assets/img/gunung5.png" alt="" srcset="">
         <img class="mountain3 absolute animated" data-speed="0.4" src="assets/img/gunung3.png" alt="" srcset="">
