fix mobile view

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body class="w-full font-sans bg-black">
     <header class="relative w-full h-screen overflow-hidden">
         <h1 class="big-title absolute z-30 leading-loose w-full text-center text-4xl sm:text-4xl md:text-8xl lg:text-8xl font-semibold text-white animated" data-speed="0.2">KADINGEH</h1>
-        <img class="mountain1 absolute animated" data-speed="-0.25" src="assets/img/gunung6.png" alt="" srcset="">
-        <img class="mountain2 absolute animated" data-speed="-0.15" src="assets/img/gunung5.png" alt="" srcset="">
-        <img class="mountain3 absolute animated" data-speed="0.3" src="assets/img/gunung3.png" alt="" srcset="">
-        <img class="mountain4 absolute animated" data-speed="0.10" src="assets/img/gunung2.png" alt="" srcset="">
-        <img class="mountain5 absolute animated" data-speed="0.5" src="assets/img/gunung4.png" alt="" srcset="">
-        <img class="mountain6 absolute animated" data-speed="0.6" src="assets/img/gunung1.png" alt="" srcset="">
-        <img class="sky absolute animated" data-speed="0.8" src="assets/img/langit.png" alt="" srcset="">
+        <img class="mountain1 absolute md:w-full lg:w-full animated" data-speed="-0.25" src="assets/img/gunung6.png" alt="" srcset="">
+        <img class="mountain2 absolute md:w-full lg:w-full animated" data-speed="-0.15" src="assets/img/gunung5.png" alt="" srcset="">
+        <img class="mountain3 absolute md:w-full lg:w-full animated" data-speed="0.3" src="assets/img/gunung3.png" alt="" srcset="">
+        <img class="mountain4 absolute md:w-full lg:w-full animated" data-speed="0.10" src="assets/img/gunung2.png" alt="" srcset="">
+        <img class="mountain5 absolute md:w-full lg:w-full animated" data-speed="0.5" src="assets/img/gunung4.png" alt="" srcset="">
+        <img class="mountain6 absolute md:w-full lg:w-full animated" data-speed="0.6" src="assets/img/gunung1.png" alt="" srcset="">
+        <img class="sky absolute md:w-full lg:w-full animated" data-speed="0.8" src="assets/img/langit.png" alt="" srcset="">
     </header>
     <div class="show-more button absolute w-full bottom-0 flex justify-end  text-white z-40">
         <div onclick="scrollToSection()"  class="button bg-gray-400 px-4 py-4">
